...

    <!-- General -->
    <string name="lock_collection">Lock</string>
    <string name="lock_collection_adv">Save</string>
    <string name="unlock_collection">Edit</string>
    <string name="coin_slot_description">Coin Image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_coin_type">Select Coin Type</string>
    <string name="select_grade">Grade</string>
    <string name="select_quantity">Quantity</string>
    <string name="select_image">Coin Image</string>
    <string name="unsaved_message">Unsaved Changes</string>
    <string name="notes">Notes</string>
    <string name="change_view_string">Change Views</string>
    <string name="save_string">Save</string>
    <string name="simple_view_string">Basic View</string>
    <string name="advanced_view_string">Advanced View</string>
    <string name="okay_exp">Okay!</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="img_default">Default</string>
    <string name="collection_completion_template">%1$d/%2$d"</string>
    <string name="collection_complete">Collection Complete!</string>
    <string name="select_collection_name">Select a new collection name</string>
    <string name="view">View</string>
    <string name="toggle_collected">Toggle Collected</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning!</string>
    <string name="toggle_search">Toggle Search</string>
    <string name="search_hint">Search coins&#8230;</string>
    <string name="tutorial_search_feature">You can now search for coins in your collection! Tap the magnifying glass icon or tap Toggle Search in the three dots menu.</string>
    <string name="add_coin">Add Coin</string>

    <!-- Main Activity -->
    <string name="app_name">Coin Collection</string>
    <string name="create_new_collection">New Collection</string>
    <string name="intro_message">Thanks for downloading Coin Collection!\nTo get started, select \'New Collection\'</string>
    <string name="tutorial_more_options">Press and hold on a collection to view, edit, copy, and more!</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="import_collection">Import Collection</string>
    <string name="export_collection">Export Collection</string>
    <string name="reorder_collection">Reorder Collections</string>
    <string name="rename_collection">Rename Collections</string>
    <string name="app_info">App Info</string>
    <string name="select_collection_delete">Select a collection to delete</string>
    <string name="collection_actions">Collection Actions</string>
    <string name="coin_actions">Coin Actions</string>
    <string name="copy_name_suffix">\ Copy</string>
    <string name="opening_database">Opening Databases…</string>
    <string name="importing_collections">Importing Collections…</string>
    <string name="exporting_collections">Exporting Collections…</string>
    <string name="import_place_message">Where would you like to import from?</string>
...
    <string name="include_states_quarters_proof">Include States Quarter Proofs</string>
    <string name="include_parks_quarters_proof">Include National Parks Quarter Proofs</string>
    <string name="include_women_quarters_proof">Include American Women Quarter Proofs</string>
    <string name="include_territories_quarters_proof">Include Proof quarters for D.C. and the U.S. Territories</string>
    <string name="include_semiq_coins">Include SemiQ Coins</string>

    <string name="create_page">Create New Collection!</string>
    <string name="update_page">Update Collection!</string>
    <string name="collection_type">Collection Type: </string>
    <string name="enter_start_year">Starting Year: </string>
    <string name="enter_stop_year">Ending Year: </string>
    <string name="creating_collection">Creating Collection…</string>
    <string name="deleting_collection">Deleting Collection…</string>
...
