<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/info_popup_text_color" />

        <TextView
            android:id="@+id/info_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_github"
            android:autoLink="web"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/info_popup_text_color" />

        <TextView
            android:id="@+id/info_attribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/info_popup_text_color" />
    </LinearLayout>
</ScrollView>