...
    android:id="@+id/main_activity_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="MergeRootFrame">

    <ListView
        android:id="@+id/main_activity_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
</FrameLayout>
