...
        android:layout_marginBottom="8dp"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_hint"
        android:visibility="gone" />

    <GridView
        android:id="@+id/standard_collection_page"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
...
